--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- App colors from Figma design tokens -->
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="primary">#F79F1F</color>
+    <color name="primary_dark">#FFAB07</color>
+    <color name="primary_yellow">#F3A80C</color>
+    <color name="text_gray">#666666</color>
+    <color name="text_dark">#130F26</color>
+    <color name="gray_light">#CCCCCC</color>
+    <color name="gray_divider">#DDDDDD</color>
+    <color name="gray_text">#888888</color>
+    <color name="gray_bg">#EEEEEE</color>
+    <color name="gray_light_bg">#F3F3F3</color>
+    <color name="gray_bg_light">#F3F4F5</color>
+    <color name="gray_medium">#AAAAAA</color>
+    <color name="green_accent">#CADCA7</color>
+    
+    <!-- Legacy colors for Material compatibility -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
 </resources>
